# CG_Basic

./: CMakeLists.txt  Object.cpp  Object.h  Primitive.cpp  Primitive.h  README.md  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ScreenBuffer.cpp  ScreenBuffer.h  Shader.cpp  Shader.h  Statics.h  ToolbarComponent.cpp  ToolbarComponent.h  TransformMatrix.cpp  TransformMatrix.h  main.cpp
Resources/Models/Flat/: floor.mtl  floor_mod.mtl
Resources/Models/Spot/: spot_collapse.mtl  spot_triangulated.mtl
